err/bruce.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bruce'...
Compiling './lib/python3.5/site-packages/bruce/display_source.py'...
***   File "./lib/python3.5/site-packages/bruce/display_source.py", line 5
    print '*'*30, page_num+1, '*'*30
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bruce/page.py'...
***   File "./lib/python3.5/site-packages/bruce/page.py", line 34
    print str(child)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bruce/plugin.py'...
***   File "./lib/python3.5/site-packages/bruce/plugin.py", line 59
    exec source in d
              ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/bruce/rst_parser.py'...
***   File "./lib/python3.5/site-packages/bruce/rst_parser.py", line 160
    print indent + '<%s>'%node.__class__.__name__
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bruce/run.py'...
***   File "./lib/python3.5/site-packages/bruce/run.py", line 157
    print __version__
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bruce-3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
